# CSU34016-INTRODUCTION-TO-FUNCTIONAL-PROGRAMMING

./: README.md
Exercise1/: makex.conf
Exercise1/Exercise1/: ex1.cabal
Exercise1/Exercise1/.stack-work/: stack.sqlite3
Exercise1/Exercise1/.stack-work/install/ccc85710/lib/x86_64-windows-ghc-8.10.7/ex1-1.0.0.0-8nXfHhVgDwYKyytgFXPMpe/: Ex1.hi
Exercise1/Exercise1/.stack-work/install/ccc85710/pkgdb/: ex1-1.0.0.0-8nXfHhVgDwYKyytgFXPMpe.conf  package.cache
Exercise1/Exercise1/src/: Ex1.hs
Exercise2/: ex2.cabal
Exercise2/.stack-work/: stack.sqlite3
Exercise2/.stack-work/install/aarch64-osx/447c359600c4da9003d8df3ce7a053c862a55c8254012fbd5c4e09cf55408421/8.10.7/pkgdb/: package.cache
Exercise2/.stack-work/install/ccc85710/pkgdb/: ex2-1.0.0.0-3L6Phgju5rL2lvpUBHcDwQ.conf  package.cache
Exercise2/src/: Ex2.hs  Main.hs
